update styles, remove treatments, add specialties page

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -11,87 +11,66 @@ permalink: /about/
   </div>
 </div>
 </div>
-<div class="container">
-  <div class="row">
+<div class="container full-width-container">
+  <div class="row justify-content-center">
 
-        <div class="mdc-card col-sm-12 col-md-4 col-lg-3 team">
+        <div class="mdc-card col-sm-12 col-md-4 col-lg-2 team">
        <div class="mdc-card__primary-action mdc-ripple-surface my-ripple" tabindex="0">
          <div class="mdc-card__media mdc-card__media--square sary">
-           <a class="media-link" href="{% link _pages/sary.html %}"></a>
+           <a class="media-link" href="{% link _pages/sary-rottenberg.html %}"></a>
         </div>
         <div class="mdc-card__media-content">
           <h1 class="my-card-title">Sary</h1>
         </div>
-          <div class="card-body mdc-typography mdc-typography--body3">Anxiety, Depression, LGBTQ+, Career, Family
+        </div>
+        <div class="card-body mdc-typography mdc-typography--body3">Anxiety, Depression, Career,  Trauma, Chronic illness/pain, LGBTQIA++, Gender non-conforming, People of color, Acculturation and immigration, Cult, Rigid religious upbringing
           </div>
+        <div class="card-body mdc-typography mdc-typography--body2 text-justify">When you choose to begin therapy, a match is important to growth and change. I am direct, warm and will help you confront some of the more challenging aspects of yourself. My goal is always to facilitate living the best life you can. Keeping that in mind, therapy can be demanding at times, and requires a lot of patience with yourself and with the work. We will learn together how to communicate about what is happening in therapy beyond the words that are used.
         </div>
           <div class="mdc-card__actions">
             <div class="mdc-card__action-buttons">
               <button class="my-ripple-button mdc-button mdc-card__action mdc-card__action--button">Learn More</button>
-              <button class="my-ripple mdc-button mdc-card__action mdc-card__action--button">Contact</button>
             </div>
           </div>
     </div>
 
-    <div class="mdc-card col-sm-12 col-md-4 col-lg-3 team">
+    <div class="mdc-card col-sm-12 col-md-4 col-lg-2 team">
        <div class="mdc-card__primary-action mdc-ripple-surface my-ripple" tabindex="0">
          <div class="mdc-card__media mdc-card__media--square kate">
-           <a class="media-link" href="{% link _pages/kate.html %}"></a>
+           <a class="media-link" href="{% link _pages/kate-blemler.html %}"></a>
         </div>
         <div class="mdc-card__media-content">
           <h1 class="my-card-title">Kate</h1>
         </div>
-          <div class="card-body mdc-typography mdc-typography--body3">Anxiety, Depression, LGBTQ+, Career, Family
+        </div>
+          <div class="card-body mdc-typography mdc-typography--body3">Couples and family, Group therapy, Young Adults, Depression, Anxiety, Trauma, Sexuality, Identity, LGBTQIA++
           </div>
+          <div class="card-body mdc-typography mdc-typography--body2 text-justify">My goal in working together will be to provide a safe space for us to explore recurring patterns and unconscious influences, such as unresolved traumas from our past, which can contribute to the difficulties we face in the present and become obstacles in living truly fulfilling lives. In our work together, we will explore how these influences and patterns may result in unsatisfying relationships with ourselves and with others. We will also consider the environmental, societal, and interpersonal influences that impact our thoughts and actions.
         </div>
           <div class="mdc-card__actions">
             <div class="mdc-card__action-buttons">
               <button class="my-ripple-button mdc-button mdc-card__action mdc-card__action--button">Learn More</button>
-              <button class="my-ripple mdc-button mdc-card__action mdc-card__action--button">Contact</button>
             </div>
           </div>
     </div>
 
-    <div class="mdc-card col-sm-12 col-md-4 col-lg-3 team">
+    <div class="mdc-card col-sm-12 col-md-4 col-lg-2 team">
        <div class="mdc-card__primary-action mdc-ripple-surface my-ripple" tabindex="0">
          <div class="mdc-card__media mdc-card__media--square alana">
-           <a class="media-link" href="{% link _pages/alana.html %}"></a>
+           <a class="media-link" href="{% link _pages/alana-devine-dunn.html %}"></a>
         </div>
         <div class="mdc-card__media-content">
           <h1 class="my-card-title">Alana</h1>
         </div>
-          <div class="card-body mdc-typography mdc-typography--body3">Anxiety, Depression, LGBTQ+, Career, Family
-          </div>
         </div>
-          <div class="mdc-card__actions">
-            <div class="mdc-card__action-buttons">
-              <!-- <i class="material-icons outlined">
-              info
-              </i> -->
-              <button class="my-button mdc-button mdc-card__action mdc-card__action--button">Learn More</button>
-              <button class="my-button mdc-button mdc-card__action mdc-card__action--button">Contact</button>
-            </div>
+          <div class="card-body mdc-typography mdc-typography--body3">Prenatal/postpartum mental health, Loss/Mourning/Grief, Depression, Anxiety
           </div>
-    </div>
+          <div class="card-body mdc-typography mdc-typography--body2 text-justify">Welcome! I respect the courage that it takes to enter into therapy, as well as the feelings of accomplishment and vulnerability that can arise. Our work will be non-judgmental, active and collaborative. In our sessions, we will work to pinpoint goals, to name, understand, accept, and weather the emotions you experience, to recognize those values that are most meaningful to you, to identify and implement adaptive ways of addressing concerns, achieving goals, and navigating life transitions, and to understand the influence of past experience on present ways of thinking and relating to others.
+        </div>
 
-    <div class="mdc-card col-sm-12 col-md-4 col-lg-3 team">
-       <div class="mdc-card__primary-action mdc-ripple-surface my-ripple" tabindex="0">
-         <div class="mdc-card__media mdc-card__media--square gwenn">
-           <a class="media-link" href="{% link _pages/gwenn.html %}"></a>
-        </div>
-        <div class="mdc-card__media-content">
-          <h1 class="my-card-title">Gwenn</h1>
-        </div>
-          <div class="card-body mdc-typography mdc-typography--body3">Anxiety, Depression, LGBTQ+, Career, Family
-          </div>
-        </div>
           <div class="mdc-card__actions">
             <div class="mdc-card__action-buttons">
-              <!-- <i class="material-icons outlined">
-              info
-              </i> -->
               <button class="my-button mdc-button mdc-card__action mdc-card__action--button">Learn More</button>
-              <button class="my-button mdc-button mdc-card__action mdc-card__action--button">Contact</button>
             </div>
           </div>
     </div>
