--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -2,67 +2,20 @@
 layout: default
 permalink: /contact/
 ---
-<div class="container-fluid contact">
-  <div class="row-fluid">
-    <div class="col-sm-12">
+<div class="container contact">
+  <div class="row justify-content-center">
+    <div class="col-lg-6 col-md-6 col-sm-12">
 
-      <!-- Extended material form grid -->
-      <form method="POST" action="https://formspree.io/llaurenb@gmail.com">
-        <!-- honeypot -->
-  <div class="hpot">
-    <label>Leave this field empty: <input name="_gotcha"></label>
-  </div>
-      <!-- Grid row -->
-      <div class="form-row">
-        <!-- Grid column -->
-        <div class="col-md-6 col-sm-12">
-          <div class="md-form form-group">
-            <input type="text" class="form-control" id="name" placeholder="Name" name="name" autocomplete="name">
-            <label for="name">Name</label>
-          </div>
-        </div>
-        <!-- Grid column -->
-        <div class="col-md-6 col-sm-12">
-          <div class="md-form form-group">
-            <input type="email" class="form-control" id="email" placeholder="Email" name="_replyto" autocomplete="email">
-            <label for="email">Email</label>
-          </div>
-        </div>
-      </div>
-
-      <!-- Grid row -->
-      <div class="row">
-        <!-- Grid column -->
-        <div class="col-md-12 col-sm-12">
-          <div class="md-form form-group">
-            <select class="browser-default custom-select">
-              <option selected>Who would you like to contact</option>
-              <option value="1">Sary Rottenberg</option>
-              <option value="2">Kate</option>
-              <option value="3">Alana</option>
-            </select>
-          </div>
-        </div>
-      </div>
-
-      <!-- Grid row -->
-      <div class="row">
-        <!-- Grid column -->
-        <div class="col-md-12 col-sm-12">
-        <div class="form-group">
-        <label for="message">Message (optional)</label>
-        <textarea name="message" class="form-control rounded-0" id="message" rows="5"></textarea>
-      </div>
-        </div>
-      </div>
-
-
-
-      <button type="submit" class="btn btn-primary btn-dark">Submit</button>
-      </form>
-      <!-- Extended material form grid -->
-
+    {% include form.html %}
 
     </div>
+
+    <div class="col-lg-6 col-md-6 col-sm-12 map">
+      <h3 class="page-header text-uppercase">
+        Find Us
+      </h3>
+      <iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=New%20York%2C%20NY%2C%20USA&key=AIzaSyC_qKIJdHDv_xY19WxvOJ4cORwC74kbRKM" allowfullscreen></iframe>
+    </div>
+
   </div>
 </div>
