--- a/_pages/kate-blemler.html
+++ b/_pages/kate-blemler.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: /kate/
+permalink: /kate-blemler/
 ---
 <div class="container-fluid card-container">
 <div class="row-fluid header">
@@ -11,10 +11,10 @@ permalink: /kate/
     <div class="col-lg-4 col-md-4 col-sm-12">
       <img src="/assets/img/kate.jpeg" alt="Kate portrait" class="img-fluid">
       <div class="col caption-btn">
-        Contact: something@gmail.com
+        Contact: 929-376-9839
       </div>
       <div class="col caption-btn">
-          Specialties: Anxiety, Depression, PTSD
+          Specialties: Couples and family, Group therapy, Young Adults, Depression, Anxiety, Trauma, Sexuality, Identity, LGBTQIA++
       </div>
     </div>
     <div class="col-lg-8 col-md-8 col-sm-12 info">
