--- a/index.html
+++ b/index.html
@@ -5,15 +5,33 @@ layout: default
 <header>
   <div class="row-fluid hero" id="page-top">
     <div>
-      <a href="#treatment" class="page-scroll fas fa-angle-double-down fa-2x hero-arrow"></a>
+      <a href="#front-statement" class="page-scroll fas fa-angle-double-down fa-2x hero-arrow"></a>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12">
-        <h2 class="hero-text"><a href="#treatment" class="page-scroll">Statement about practice goes here </a></h2>
+        <h2 class="hero-text"><a href="#front-statement" class="page-scroll">Take the first step to a better life</a></h2>
       </div>
     <div class="hero-overlay">
     </div>
   </div>
 </header>
-  {% include treatments.html %}
+
+  <div class="container full-width-container">
+    <div class="row">
+      <div class="col-12" id="front-statement">
+        <div>
+          <p>
+          Welcome to Sary Rottenberg Psychotherapy! Our dedicated team of therapists is committed to providing you with empathic care. Learn more about how we can help you here ( insert hyperlink to specialities page).
+          </p>
+        </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12" id="front-statement-meet">
+          <p>
+            Whether you are looking for support through difficult emotions, traumatic experiences, life  transitions, or would like to explore aspects of your identity, the clinicians at Sary Rottenberg Psychotherapy are here for you.
+          </p>
+        </div>
+      </div>
+  </div>
 
   {% include footer.html %}
