fix styling services, specialties.html

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -3,18 +3,18 @@ layout: default
 permalink: /contact/
 ---
 <div class="container contact">
+
   <div class="row justify-content-center">
+
     <div class="col-lg-6 col-md-6 col-sm-12">
-
     {% include form.html %}
-
     </div>
 
     <div class="col-lg-6 col-md-6 col-sm-12 map">
       <h3 class="page-header text-uppercase">
         Find Us
       </h3>
-      <iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=New%20York%2C%20NY%2C%20USA&key=AIzaSyC_qKIJdHDv_xY19WxvOJ4cORwC74kbRKM" allowfullscreen></iframe>
+      <iframe class="mw-300" frameborder=0 src="https://www.google.com/maps/embed/v1/place?q=New%20York%2C%20NY%2C%20USA&key=AIzaSyC_qKIJdHDv_xY19WxvOJ4cORwC74kbRKM" allowfullscreen></iframe>
     </div>
 
   </div>
