--- a/_pages/services.html
+++ b/_pages/services.html
@@ -5,33 +5,48 @@ permalink: /services/
 <div class="container">
 <div class="row header">
   <div class="col-sm-12">
-    <h2 class="page-header text-uppercase">Services</h2>
+    <h1 class="page-header text-uppercase">Services</h1>
   </div></div>
 
-  <div class="row section">
-    <div class="col-lg-4 col-md-4 col-sm-12"><img src="https://picsum.photos/400" class="img-fluid" alt=""></div>
-    <div class="col-lg-8 col-md-8 col-sm-12">
-      <h3>Individuals</h3>
-      <p class="info">Cupcake ipsum dolor sit. Amet powder bear claw sweet jujubes dragée carrot cake cake. Danish sweet jelly beans sweet. Sweet dessert halvah. Cupcake tart jelly cotton candy icing danish dessert sugar plum sweet. Jujubes tootsie roll liquorice. Tart chocolate bar marzipan. Chocolate cake wafer candy canes chocolate cake macaroon pudding chocolate. Marshmallow marzipan sesame snaps pudding cupcake chupa chups. Jelly-o wafer bear claw jujubes pudding chocolate macaroon caramels. Jelly beans dessert muffin. Muffin lemon drops marshmallow chupa chups sugar plum. Bear claw sugar plum jelly ice cream jujubes croissant candy soufflé dessert.</p>
+  <div class="row justify-content-center align-items-center" id="services">
+    <div class="col-lg-3 col-md-4 col-sm-12">
+      <div class="row justify-content-center">
+        <div class="box box-3"></div>
+      </div>
+    </div>
+    <div class="col-lg-6 col-md-8 col-sm-12">
+      <h3 class="page-header-2">Individuals</h3>
+      <p class="info">Our Integrative approach drawing from psychodynamic, cognitive behavioral, strengths-based and mindfulness practices, tailoring to and honoring your unique needs.</p>
     </div>
   </div>
 
-    <div class="row section">
-      <div class="col-lg-8 col-md-8 col-sm-12">
-      <h3>Relationship Counseling</h3>
-      <p class="info">Cupcake ipsum dolor sit. Amet powder bear claw sweet jujubes dragée carrot cake cake. Danish sweet jelly beans sweet. Sweet dessert halvah. Cupcake tart jelly cotton candy icing danish dessert sugar plum sweet. Jujubes tootsie roll liquorice. Tart chocolate bar marzipan. Chocolate cake wafer candy canes chocolate cake macaroon pudding chocolate. Marshmallow marzipan sesame snaps pudding cupcake chupa chups. Jelly-o wafer bear claw jujubes pudding chocolate macaroon caramels. Jelly beans dessert muffin. Muffin lemon drops marshmallow chupa chups sugar plum. Bear claw sugar plum jelly ice cream jujubes croissant candy soufflé dessert.</p>
-    </div>
-    <div class="col-lg-4 col-md-4 col-sm-12"><img src="https://picsum.photos/400" class="img-fluid" alt=""></div>
+    <div class="row justify-content-center" id="services">
+      <div class="col-lg-3 col-md-4 col-sm-12 order-lg-last">
+        <div class="row justify-content-center">
+          <div class="box box-2"></div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-8 col-sm-12 order-lg-first">
+      <h3 class="page-header-2">Relationship Counseling</h3>
+      <p class="info">The special set of challenges that comes with romantic relationships are addressed bringing to light patterns of communications, and needs that are asked to be met.</p>
     </div>
 
-    <div class="row section">
-      <div class="col-lg-4 col-md-4 col-sm-12"><img src="https://picsum.photos/400" class="img-fluid" alt=""></div>
-      <div class="col-lg-8 col-md-8 col-sm-12">
-        <h3>Family</h3>
-        <p class="info">Cupcake ipsum dolor sit. Amet powder bear claw sweet jujubes dragée carrot cake cake. Danish sweet jelly beans sweet. Sweet dessert halvah. Cupcake tart jelly cotton candy icing danish dessert sugar plum sweet. Jujubes tootsie roll liquorice. Tart chocolate bar marzipan. Chocolate cake wafer candy canes chocolate cake macaroon pudding chocolate. Marshmallow marzipan sesame snaps pudding cupcake chupa chups. Jelly-o wafer bear claw jujubes pudding chocolate macaroon caramels. Jelly beans dessert muffin. Muffin lemon drops marshmallow chupa chups sugar plum. Bear claw sugar plum jelly ice cream jujubes croissant candy soufflé dessert.</p>
+    </div>
+
+    <div class="row justify-content-center" id="services">
+      <div class="col-lg-3 col-md-4 col-sm-12"><img src="https://picsum.photos/200" class="img-fluid service-img" alt=""></div>
+      <div class="col-lg-6 col-md-8 col-sm-12">
+        <h3 class="page-header-2">Family Counseling</h3>
+        <p class="info">All family formations are welcome to counseling, monogamous, non traditional, single parenthood and co-parenting.</p>
       </div>
     </div>
 
-
+    <div class="row justify-content-center" id="services">
+      <div class="col-lg-6 col-md-8 col-sm-12">
+      <h3 class="page-header-2">Group Counseling</h3>
+      <p class="info">The special set of challenges that comes with romantic relationships are addressed bringing to light patterns of communications, and needs that are asked to be met.</p>
+    </div>
+    <div class="col-lg-3 col-md-4 col-sm-12"><img src="https://picsum.photos/200" class="img-fluid service-img" alt=""></div>
+    </div>
 
   </div>
