--- a/index.html
+++ b/index.html
@@ -8,19 +8,37 @@ layout: default
       <a href="#front-statement" class="page-scroll fas fa-angle-double-down fa-2x hero-arrow"></a>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12">
-        <h2 class="hero-text"><a href="#front-statement" class="page-scroll">Take the first step to a better life</a></h2>
+        <h2 class="hero-text">Take the first <br>step to a
+          <svg viewbox="0 0 220 60">
+            <defs>
+              <mask id="mask" height="75" width="200" y="0" x="0">
+                <rect x="0" y="0" height="80" fill="#ffffff" width="200"></rect>
+                <text text-anchor="left" dy="1" y="45" x="25">better</text>
+              </mask>
+            </defs>
+              <rect mask="url(#mask)" fill="#ffffff" x="20" y="5" height="50" width="140">
+              </rect>
+          </svg>
+          <br>
+          life.</h2>
       </div>
     <div class="hero-overlay">
     </div>
   </div>
 </header>
 
+
+
+
+
   <div class="container full-width-container">
     <div class="row">
       <div class="col-12" id="front-statement">
         <div>
           <p>
-          Welcome to Sary Rottenberg Psychotherapy! Our dedicated team of therapists is committed to providing you with empathic care. Learn more about how we can help you here ( insert hyperlink to specialities page).
+          Welcome to Sary Rottenberg Psychotherapy! Our dedicated team of therapists is committed to providing you with empathic care.Learn more about how we can help you.
+          <br>
+          <button class="mdc-button mdc-button--outlined">Click here</button>
           </p>
         </div>
         </div>
@@ -29,6 +47,8 @@ layout: default
         <div class="col-12" id="front-statement-meet">
           <p>
             Whether you are looking for support through difficult emotions, traumatic experiences, life  transitions, or would like to explore aspects of your identity, the clinicians at Sary Rottenberg Psychotherapy are here for you.
+            <br>
+            <button class="mdc-button mdc-button--outlined">Meet our team</button>
           </p>
         </div>
       </div>
