fix styling footer, fix specialties menu

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -6,15 +6,18 @@ permalink: /contact/
 
   <div class="row justify-content-center">
 
-    <div class="col-lg-6 col-md-6 col-sm-12">
+    <div class="col-lg-6 col-md-6 col-sm-12 form">
+      <h3 class="page-header-2 text-uppercase">
+        Send us a message
+      </h3>
     {% include form.html %}
     </div>
 
     <div class="col-lg-6 col-md-6 col-sm-12 map">
-      <h3 class="page-header text-uppercase">
+      <h3 class="page-header-2 text-uppercase ">
         Find Us
       </h3>
-      <iframe class="mw-300" frameborder=0 src="https://www.google.com/maps/embed/v1/place?q=New%20York%2C%20NY%2C%20USA&key=AIzaSyC_qKIJdHDv_xY19WxvOJ4cORwC74kbRKM" allowfullscreen></iframe>
+      <iframe class="mw-250" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJM7QM169ZwokR_40cJDZaujk&key=AIzaSyC_qKIJdHDv_xY19WxvOJ4cORwC74kbRKM" allowfullscreen></iframe> 
     </div>
 
   </div>
