--- a/_pages/services.html
+++ b/_pages/services.html
@@ -30,23 +30,31 @@ permalink: /services/
       <h3 class="page-header-2">Relationship Counseling</h3>
       <p class="info">The special set of challenges that comes with romantic relationships are addressed bringing to light patterns of communications, and needs that are asked to be met.</p>
     </div>
-
     </div>
 
-    <div class="row justify-content-center" id="services">
-      <div class="col-lg-3 col-md-4 col-sm-12"><img src="https://picsum.photos/200" class="img-fluid service-img" alt=""></div>
-      <div class="col-lg-6 col-md-8 col-sm-12">
-        <h3 class="page-header-2">Family Counseling</h3>
-        <p class="info">All family formations are welcome to counseling, monogamous, non traditional, single parenthood and co-parenting.</p>
+    <div class="row justify-content-center align-items-center" id="services">
+    <div class="col-lg-3 col-md-4 col-sm-12">
+      <div class="row justify-content-center">
+        <div class="box box-3"></div>
       </div>
     </div>
-
+    <div class="col-lg-6 col-md-8 col-sm-12">
+      <h3 class="page-header-2">Family Counseling</h3>
+      <p class="info">All family formations are welcome to counseling, monogamous, non traditional, single parenthood and co-parenting.</p>
+    </div>
+  </div>
+    
     <div class="row justify-content-center" id="services">
-      <div class="col-lg-6 col-md-8 col-sm-12">
+      <div class="col-lg-3 col-md-4 col-sm-12 order-lg-last">
+        <div class="row justify-content-center">
+          <div class="box box-2"></div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-8 col-sm-12 order-lg-first">
       <h3 class="page-header-2">Group Counseling</h3>
       <p class="info">The special set of challenges that comes with romantic relationships are addressed bringing to light patterns of communications, and needs that are asked to be met.</p>
     </div>
-    <div class="col-lg-3 col-md-4 col-sm-12"><img src="https://picsum.photos/200" class="img-fluid service-img" alt=""></div>
+
     </div>
 
   </div>
