--- a/_pages/about.html
+++ b/_pages/about.html
@@ -11,6 +11,7 @@ permalink: /about/
   </div>
 </div>
 </div>
+<!-- Begin About Cards -->
 <div class="container full-width-container">
   <div class="row justify-content-center">
 
@@ -21,15 +22,14 @@ permalink: /about/
              <h1 class="my-card-title">Sary</h1>
            </div></a>
         </div>
-
         </div>
-        <div class="card-body mdc-typography mdc-typography--body3 info">Anxiety, Depression, Career,  Trauma, Chronic illness/pain, LGBTQIA++, Gender non-conforming, People of color, Acculturation and immigration, Cult, Rigid religious upbringing
+        <div class="card-body mdc-typography mdc-typography--body3 mdc-typography--body3-specialties">Anxiety, Depression, Career,  Trauma, Chronic illness/pain, LGBTQIA++, Gender non-conforming, People of color, Acculturation and immigration, Cult, Rigid religious upbringing
           </div>
         <div class="card-body mdc-typography mdc-typography--body2 text-justify">When you choose to begin therapy, a match is important to growth and change. I am direct, warm and will help you confront some of the more challenging aspects of yourself. My goal is always to facilitate living the best life you can. Keeping that in mind, therapy can be demanding at times, and requires a lot of patience with yourself and with the work. We will learn together how to communicate about what is happening in therapy beyond the words that are used.
         </div>
           <div class="mdc-card__actions">
             <div class="mdc-card__action-buttons">
-              <button id="learn-more" class="my-ripple-button mdc-button mdc-card__action mdc-card__action--button">Learn More</button>
+              <a href="{% link _pages/sary-rottenberg.html %}"><button id="learn-more" class="my-ripple-button mdc-button mdc-card__action mdc-card__action--button">Learn More</button></a>
             </div>
           </div>
     </div>
@@ -41,15 +41,16 @@ permalink: /about/
              <h1 class="my-card-title">Kate</h1>
            </div></a>
         </div>
-
         </div>
-          <div class="card-body mdc-typography mdc-typography--body3 info">Couples and family, Group therapy, Young Adults, Depression, Anxiety, Trauma, Sexuality, Identity, LGBTQIA++
+          <div class="card-body mdc-typography mdc-typography--body3 mdc-typography--body3-specialties ">Couples and family, Group therapy, Young Adults, Depression, Anxiety, Trauma, Sexuality, Identity, LGBTQIA++
           </div>
           <div class="card-body mdc-typography mdc-typography--body2 text-justify">My goal in working together will be to provide a safe space for us to explore recurring patterns and unconscious influences, such as unresolved traumas from our past, which can contribute to the difficulties we face in the present and become obstacles in living truly fulfilling lives. In our work together, we will explore how these influences and patterns may result in unsatisfying relationships with ourselves and with others. We will also consider the environmental, societal, and interpersonal influences that impact our thoughts and actions.
         </div>
           <div class="mdc-card__actions">
             <div class="mdc-card__action-buttons">
-              <button id="learn-more" class="my-ripple-button mdc-button mdc-card__action mdc-card__action--button">Learn More</button>
+              <a href="{% link _pages/kate-blemler.html %}">
+                  <button id="learn-more" class="my-ripple-button mdc-button mdc-card__action mdc-card__action--button">Learn More</button>
+              </a>
             </div>
           </div>
     </div>
@@ -63,14 +64,16 @@ permalink: /about/
         </div>
 
         </div>
-          <div class="card-body mdc-typography mdc-typography--body3 info">Prenatal/postpartum mental health, Loss/Mourning/Grief, Depression, Anxiety
+          <div class="card-body mdc-typography mdc-typography--body3 mdc-typography mdc-typography--body3-specialties ">Prenatal/postpartum mental health, Loss/Mourning/Grief, Depression, Anxiety
           </div>
           <div class="card-body mdc-typography mdc-typography--body2 text-justify">Welcome! I respect the courage that it takes to enter into therapy, as well as the feelings of accomplishment and vulnerability that can arise. Our work will be non-judgmental, active and collaborative. In our sessions, we will work to pinpoint goals, to name, understand, accept, and weather the emotions you experience, to recognize those values that are most meaningful to you, to identify and implement adaptive ways of addressing concerns, achieving goals, and navigating life transitions, and to understand the influence of past experience on present ways of thinking and relating to others.
         </div>
 
           <div class="mdc-card__actions">
             <div class="mdc-card__action-buttons">
-              <button id="learn-more" class="my-button mdc-button mdc-card__action mdc-card__action--button">Learn More</button>
+              <a href="{% link _pages/alana-devine-dunn.html %}">
+                  <button id="learn-more" class="my-button mdc-button mdc-card__action mdc-card__action--button">Learn More</button>
+              </a>
             </div>
           </div>
     </div>
