--- a/_pages/specialties.html
+++ b/_pages/specialties.html
@@ -12,7 +12,7 @@ permalink: /specialties/
 <!-- Specialties Menu -->
 <div class="row justify-content-center">
   <div class="menu-container" id="menu-specialties">
-    <button class="mdc-button" id="mdc-button-specialty">Jump To a Specialty</button>
+    <button class="mdc-button" id="mdc-button-specialty">Choose Specialty</button>
     <div class="mdc-menu mdc-menu-surface">
       <ul class="mdc-list" role="menu" aria-hidden="true" aria-orientation="vertical" tabindex="-1">
         <a href="#identity" class="page-scroll"><li class="mdc-list-item" role="menuitem">
