--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@ layout: default
       <a href="#front-statement" class="page-scroll fas fa-angle-double-down fa-2x hero-arrow"></a>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12">
-        <h2 class="hero-text">Take the first <br>step to a
+        <h2 class="hero-text">Take the first <br>step to a better
       <!--svg text styling-->
-      <svg viewbox="0 0 220 60">
-            <defs>
-              <mask id="mask" height="75" width="200" y="0" x="0">
-                <rect x="0" y="0" height="80" fill="#ffffff" width="200"></rect>
-                <text text-anchor="left" dy="1" y="45" x="25">better</text>
-              </mask>
-            </defs>
-              <rect mask="url(#mask)" fill="#ffffff" x="20" y="5" height="50" width="140">
-              </rect>
-          </svg>
+<!--
+      <svg width="200" viewBox="0 -4 200 60" height="60">
+      <defs>
+        <mask id="mask" width="200" x="0" y="0" height="50">
+          <rect x="0" y="0" fill="#ffffff" width="200" height="50"></rect>
+          <text dy="3" y="40" x="37">better</text>
+        </mask>
+      </defs>
+        <rect mask="url(#mask)" fill="#ffffff" x="20" y="5" width="170" height="50">
+        </rect>
+    </svg> -->
+
       <!-- end svg -->
           <br>
           life.</h2>
