style buttons about page, add form routing, add new headshots

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -7,17 +7,17 @@ permalink: /contact/
   <div class="row justify-content-center">
 
     <div class="col-lg-6 col-md-6 col-sm-12 form">
-      <h3 class="page-header-2 text-uppercase">
-        Send us a message
+      <h3 class="page-header-2">
+        Schedule a Free Consultation
       </h3>
     {% include form.html %}
     </div>
 
     <div class="col-lg-6 col-md-6 col-sm-12 map">
-      <h3 class="page-header-2 text-uppercase ">
-        Find Us
+      <h3 class="page-header-2">
+        Our Location
       </h3>
-      <iframe class="mw-250" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJM7QM169ZwokR_40cJDZaujk&key=AIzaSyC_qKIJdHDv_xY19WxvOJ4cORwC74kbRKM" allowfullscreen></iframe> 
+      <iframe class="mw-250" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJM7QM169ZwokR_40cJDZaujk&key=AIzaSyC_qKIJdHDv_xY19WxvOJ4cORwC74kbRKM" allowfullscreen></iframe>
     </div>
 
   </div>
