--- a/_pages/kate-blemler.html
+++ b/_pages/kate-blemler.html
@@ -5,19 +5,16 @@ permalink: /kate-blemler/
 <div class="container-fluid card-container">
 <div class="row-fluid header">
   <div class="col-sm-12">
-    <h2 class="page-header text-uppercase">Kate Blemler, MHC-LP</h2>
+    <h2 class="page-header">Kate Blemler, MHC-LP</h2>
   </div></div>
   <div class="row">
     <div class="col-lg-4 col-md-4 col-sm-12">
-      <img src="/assets/img/kate.jpeg" alt="Kate portrait" class="img-fluid">
+      <img src="/assets/img/Kate 8X10_website.jpg" alt="Kate Blemler" class="img-fluid headshot">
       <div class="col caption-btn">
-        Contact: 929-376-9839
-      </div>
-      <div class="col caption-btn">
-          Specialties: Couples and family, Group therapy, Young Adults, Depression, Anxiety, Trauma, Sexuality, Identity, LGBTQIA++
+          <button class="mdc-button mdc-button--raised"><span class="mdc-button__ripple"></span>Contact</button>
       </div>
     </div>
-    <div class="col-lg-8 col-md-8 col-sm-12 info">
+    <div class="col-lg-8 col-md-8 col-sm-12 info-about">
       <p>
       I earned an MSEd in Mental Health Counseling from Fordham University and have experience working in private practice as well as nonprofit mental health agencies. I primarily see clients for individual sessions; additionally, I run process groups and see clients for couples and family sessions.
     </p>
@@ -32,6 +29,7 @@ permalink: /kate-blemler/
     </p>
     <p>
     I primarily work with young adults struggling with depression, anxiety, trauma, sexuality, and identity, and I work with many folks who identify as LGBTQAI. In addition to seeing individuals, I work with couples and families regarding adjustment issues and interpersonal conflicts, including relational difficulties and parenting concerns. I also offer group therapy services, which will typically meet weekly on Saturdays.
+    <a href="{% link _pages/about.html %}"><span class="back">Who We Are</span></a>
     </p>
 
     </div>
