--- a/_pages/services.html
+++ b/_pages/services.html
@@ -5,7 +5,7 @@ permalink: /services/
 <div class="container">
 <div class="row header">
   <div class="col-sm-12">
-    <h1 class="page-header text-uppercase">Services</h1>
+    <h1 class="page-header">Services</h1>
   </div></div>
 
   <div class="row justify-content-center align-items-center" id="services">
@@ -35,7 +35,7 @@ permalink: /services/
     <div class="row justify-content-center align-items-center" id="services">
     <div class="col-lg-3 col-md-4 col-sm-12">
       <div class="row justify-content-center">
-        <div class="box box-3"></div>
+        <div class="box box-4"></div>
       </div>
     </div>
     <div class="col-lg-6 col-md-8 col-sm-12">
@@ -43,11 +43,11 @@ permalink: /services/
       <p class="info">All family formations are welcome to counseling, monogamous, non traditional, single parenthood and co-parenting.</p>
     </div>
   </div>
-    
+
     <div class="row justify-content-center" id="services">
       <div class="col-lg-3 col-md-4 col-sm-12 order-lg-last">
         <div class="row justify-content-center">
-          <div class="box box-2"></div>
+          <div class="box box-1"></div>
         </div>
       </div>
       <div class="col-lg-6 col-md-8 col-sm-12 order-lg-first">
