--- a/_pages/specialties.html
+++ b/_pages/specialties.html
@@ -5,7 +5,7 @@ permalink: /specialties/
 <div class="container">
   <div class="row header">
     <div class="col-sm-12">
-      <h1 class="page-header text-uppercase" id="page-top">Specialties
+      <h1 class="page-header" id="page-top">Specialties
       </h1>
     </div>
 </div>
@@ -178,7 +178,7 @@ permalink: /specialties/
     </div>
     <div class="row justify-content-center">
       <div class="col-lg-8 col-md-8 col-sm-12">
-        <h3 class="page-header-2" id="religion">Rigid Religious Upbringing/ Cult survivors</h3>
+        <h3 class="page-header-2" id="religion">Rigid Religious Upbringing/Cult Survivors</h3>
         <p class="info">When leaving high demand societies or cult like environments readjusting or learning new ways of being if you were born into a cult can be very challenging, we will explore the ways the cult effected your personality and your view of life,  and yourself. We will explore how to navigate your own spirituality in light of your background.
             <br>
         <span class="back">
