--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
 </header>
 <!-- /End Hero Image Begin Frint Statement -->
   <div class="container full-width-container">
-    <div class="row">
+    <div class="row justify-content-center">
       <div class="col-12" id="front-statement">
         <div>
           <p>
@@ -45,7 +45,10 @@ layout: default
         </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row divider">
+
+      </div>
+      <div class="row justify-content-center">
         <div class="col-12" id="front-statement-meet">
           <p>
             Whether you are looking for support through difficult emotions, traumatic experiences, life  transitions, or would like to explore aspects of your identity, the clinicians at Sary Rottenberg Psychotherapy are here for you.
