--- a/_pages/alana-devine-dunn.html
+++ b/_pages/alana-devine-dunn.html
@@ -5,19 +5,16 @@ permalink: /alana-devine-dunn/
 <div class="container-fluid">
 <div class="row header">
   <div class="col-sm-12">
-    <h2 class="page-header text-uppercase">Alana Devine-Dunn, MHC-LP</h2>
+    <h2 class="page-header">Alana Devine-Dunn, MHC-LP</h2>
   </div></div>
   <div class="row">
     <div class="col-lg-4 col-md-4 col-sm-12">
-      <img src="/assets/img/alana.jpeg" alt="Alana portrait" class="img-fluid">
+      <img src="/assets/img/Alana 8X10_website.jpg" alt="Alana" class="img-fluid headshot">
       <div class="col caption-btn">
-        Contact: something@gmail.com
-      </div>
-      <div class="col caption-btn">
-        Specialties: Prenatal/postpartum mental healht, Loss/Mourning/Grief, Depression, Anxiety
+          <button class="mdc-button mdc-button--raised"><span class="mdc-button__ripple"></span>Contact</button>
       </div>
     </div>
-<div class="col-lg-8 col-md-8 col-sm-12 info">
+<div class="col-lg-8 col-md-8 col-sm-12 info-about">
     <p>
       I work with individuals experiencing depression, anxiety, OCD, career, life-role, and relationship transitions as well as those seeking emotional support in dealing with medical diagnoses, loss, and trauma. I work with patients to uncover and address their core beliefs, emotions, behaviors, and thoughts. This gives patients not only the tools to cope with difficult situations, but also agency in their lives and the opportunity to thrive.
     </p>
@@ -33,11 +30,8 @@ permalink: /alana-devine-dunn/
     <p>
     I work utilizing an integrative approach, incorporating techniques from cognitive behavioral therapy, acceptance and commitment therapy, dialectical behavior therapy, mindfulness-based approaches, and psychodynamic psychotherapy, based your individualized needs and goals.
     </p>
-<p>I look forward to meeting you and to our work together.</p>
-
+<p>I look forward to meeting you and to our work together.
+<a href="{% link _pages/about.html %}"><span class="back">Who We Are</span></a></p>
 </div>
-
-
-
   </div>
   </div>
